実験を追加

--- a/notebook/set_transformer.ipynb
+++ b/notebook/set_transformer.ipynb
@@ -517,7 +517,7 @@
     "    with torch.no_grad():\n",
     "        for idx in range(len(test_dataset)):\n",
     "            data, scores = test_dataset[idx]\n",
-    "            anime_ids_chunks = [data[i : i + n_samples] for i in range(0, len(data), n_samples)]\n",
+    "            anime_ids_chunks = [data[i : i + n_samples] for i in range(0, len(data), n_samples)] # indexをシャッフルして n 個ずつに分割　を繰り返せば良い\n",
     "            aggregated_predictions = []\n",
     "\n",
     "            for chunk in anime_ids_chunks:\n",
@@ -525,7 +525,7 @@
     "\n",
     "            aggregated_predictions = torch.cat(aggregated_predictions, dim=1)\n",
     "            predictions.append(aggregated_predictions.mean(0).numpy())\n",
-    "            actuals.append(scores.numpy())\n"
+    "            actuals.append(scores.numpy())"
    ]
   },
   {
