--- a/notebook/set_transformer.ipynb
+++ b/notebook/set_transformer.ipynb
@@ -463,6 +463,7 @@
     "\n",
     "n_samples = 20\n",
     "batch_size = 10\n",
+    "num_epochs = 2\n",
     "\n",
     "# ユニークなanime_idの数を取得\n",
     "num_animes = len(anime_idx)\n",
@@ -502,7 +503,7 @@
     "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "    model.train()\n",
-    "    for epoch in range(10):  # ここのエポック数もサンプルです\n",
+    "    for epoch in range(num_epochs):  # ここのエポック数もサンプルです\n",
     "        for data, scores in train_loader:\n",
     "            optimizer.zero_grad()\n",
     "            outputs = model(data)\n",
@@ -517,7 +518,9 @@
     "    with torch.no_grad():\n",
     "        for idx in range(len(test_dataset)):\n",
     "            data, scores = test_dataset[idx]\n",
-    "            anime_ids_chunks = [data[i : i + n_samples] for i in range(0, len(data), n_samples)] # indexをシャッフルして n 個ずつに分割　を繰り返せば良い\n",
+    "            anime_ids_chunks = [\n",
+    "                data[i : i + n_samples] for i in range(0, len(data), n_samples)\n",
+    "            ]  # indexをシャッフルして n 個ずつに分割　を繰り返せば良い\n",
     "            aggregated_predictions = []\n",
     "\n",
     "            for chunk in anime_ids_chunks:\n",
