--- a/notebook/tvtt.ipynb
+++ b/notebook/tvtt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "47bff823-c44c-4c8a-b458-c456a989ae2e",
    "metadata": {
     "tags": []
@@ -23,7 +23,7 @@
     "from hydra import compose, initialize\n",
     "from scipy.sparse import csr_matrix, random\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.model_selection import StratifiedGroupKFold\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "# 最大表示列数の指定（ここでは50列を指定）\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "id": "df69d7d1-841e-43de-97bf-8d8e5e722bbe",
    "metadata": {
     "tags": []
@@ -71,6 +71,92 @@
     "from torch.cuda.amp import GradScaler, autocast\n",
     "from torch.utils.data import DataLoader, Dataset\n",
     "from tqdm import tqdm\n",
+    "\n",
+    "\n",
+    "class UserDataset(Dataset):\n",
+    "    def __init__(self, merge_df: pd.DataFrame, max_padding: int = 531):\n",
+    "        \"\"\"\n",
+    "        merge_df: すべてのデータを結合したもの。以下のカラムを持つ。\n",
+    "        - user_label: 0-indexed にした user_id\n",
+    "        - anime_label: 0-indexed にした anime_id\n",
+    "        - mode: その行について trainは1, validationは2, testは3 にしたもの\n",
+    "        - score: testに関しては適当な値(0)で良い\n",
+    "        \"\"\"\n",
+    "        self.merge_df = merge_df\n",
+    "        self.max_padding = max_padding\n",
+    "        self.user2anime_dict = merge_df.groupby(\"user_label\")[\"anime_label\"].apply(list).to_dict()\n",
+    "        self.user2mode_dict = merge_df.groupby(\"user_label\")[\"mode\"].apply(list).to_dict()\n",
+    "        self.user2score = merge_df.groupby(\"user_label\")[\"score\"].apply(list).to_dict()\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return self.merge_df[\"user_label\"].nunique()\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        \"\"\"\n",
+    "        出力したいもの\n",
+    "        - input_tensor: user_id, anime_id 系列　を結合したもの\n",
+    "        - mode_tensor: user_idか、train用の anime_id か、validation用のanime_idか、test用のanime_id かを判断するためのもの。\n",
+    "        損失計算の対象を決めるために設定する。{user_id: 0, train:1, valid:2, test:3}\n",
+    "        - attention_mask: 計算対象外のpaddingの位置をtransformerに教えるために必要\n",
+    "        - score_tensor: ラベルとなるスコア情報。ラベルが無いものは適当に0で埋めるが使わない\n",
+    "        \"\"\"\n",
+    "        user_tensor = torch.Tensor([idx]).int()\n",
+    "        anime_tensor = torch.Tensor(self.user2anime_dict[idx]).int()\n",
+    "        mode_tensor = torch.Tensor(self.user2mode_dict[idx]).int()\n",
+    "        score_tensor = torch.Tensor(self.user2score[idx]).float()\n",
+    "\n",
+    "        # ランダムに順序を変更する\n",
+    "        indices = torch.randperm(anime_tensor.size(0))\n",
+    "        anime_tensor = anime_tensor[indices]\n",
+    "        mode_tensor = mode_tensor[indices]\n",
+    "        score_tensor = score_tensor[indices]\n",
+    "\n",
+    "        pad_length = self.max_padding - anime_tensor.size(0)\n",
+    "\n",
+    "        # unseen用 (user_tensorは入れない）\n",
+    "        attention_mask = torch.zeros([self.max_padding, self.max_padding], dtype=torch.bool)\n",
+    "        attention_mask[: anime_tensor.size(0), : anime_tensor.size(0)] = True\n",
+    "        input_tensor = torch.cat((anime_tensor, torch.zeros(pad_length, dtype=torch.int32)))\n",
+    "        mode_tensor = torch.cat(\n",
+    "            (\n",
+    "                mode_tensor,\n",
+    "                torch.zeros(pad_length, dtype=torch.int32),\n",
+    "            )\n",
+    "        )\n",
+    "        score_tensor = torch.cat(\n",
+    "            (\n",
+    "                score_tensor,\n",
+    "                torch.zeros(pad_length, dtype=torch.float),\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "        \"\"\"\n",
+    "        # seen用\n",
+    "        attention_mask = torch.zeros([self.max_padding + 1, self.max_padding + 1], dtype=torch.bool)\n",
+    "        attention_mask[: anime_tensor.size(0) + 1, : anime_tensor.size(0) + 1] = True\n",
+    "        input_tensor = torch.cat((user_tensor, anime_tensor, torch.zeros(pad_length, dtype=torch.int32)))\n",
+    "        mode_tensor = torch.cat(\n",
+    "            (\n",
+    "                torch.zeros(1, dtype=torch.int32),\n",
+    "                mode_tensor,\n",
+    "                torch.zeros(pad_length, dtype=torch.int32),\n",
+    "            )\n",
+    "        )\n",
+    "        score_tensor = torch.cat(\n",
+    "            (\n",
+    "                torch.zeros(1, dtype=torch.float),\n",
+    "                score_tensor,\n",
+    "                torch.zeros(pad_length, dtype=torch.float),\n",
+    "            )\n",
+    "        )\n",
+    "        \"\"\"\n",
+    "        sample = {\n",
+    "            \"input_tensor\": input_tensor,\n",
+    "            \"mode_tensor\": mode_tensor,\n",
+    "            \"attention_mask\": attention_mask,\n",
+    "            \"score_tensor\": score_tensor,\n",
+    "        }\n",
+    "        return sample\n",
     "\n",
     "\n",
     "class TransformerModel(nn.Module):\n",
@@ -101,9 +187,12 @@
     "        self.fc = nn.Sequential(nn.Linear(hidden_size, hidden_size), nn.ReLU(), nn.Linear(hidden_size, 1))\n",
     "\n",
     "    def forward(self, x: torch.Tensor, attention_mask: torch.Tensor) -> torch.Tensor:\n",
+    "        x = self.anime_embedding(x[:, :])\n",
+    "        \"\"\" seen用\n",
     "        user_x = self.user_embedding(x[:, 0:1])\n",
-    "        anime_x = self.anime_embedding(x[:, 1:])  # 修正\n",
+    "        anime_x = self.anime_embedding(x[:, 1:])\n",
     "        x = torch.cat([user_x, anime_x], dim=1)\n",
+    "        \"\"\"\n",
     "        x = self.transformer_encoder(x)\n",
     "        output = self.fc(x).squeeze(2)\n",
     "        return output\n",
@@ -137,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 67,
    "id": "c6ee8420-fe3d-446e-8804-50adbd6b27fd",
    "metadata": {
     "tags": []
@@ -150,13 +239,21 @@
     "train_user_ids = load_target(\"user_id\")\n",
     "sub = load_sample_sub()\n",
     "\n",
-    "\n",
     "if config.debug:\n",
-    "    sample_index = train_df.sample(100).index\n",
+    "    n = 1000\n",
+    "    sample_index = train_df.sample(n).index\n",
     "    train_df = train_df.iloc[sample_index].reset_index(drop=True)\n",
-    "    test_df = test_df.head(100)\n",
+    "    test_df = test_df.head(n)\n",
     "    train_user_ids = train_user_ids.iloc[sample_index].reset_index(drop=True)\n",
-    "    sub = sub.head(100)"
+    "    sub = sub.head(n)\n",
+    "\n",
+    "\n",
+    "# Merge the train data with the anime meta data\n",
+    "all_df = pd.concat([train_df, test_df]).reset_index(drop=True)\n",
+    "\n",
+    "# 0-indexedの連番にする\n",
+    "all_df[\"user_label\"], user_idx = pd.factorize(all_df[\"user_id\"])\n",
+    "all_df[\"anime_label\"], anime_idx = pd.factorize(all_df[\"anime_id\"])"
    ]
   },
   {
@@ -165,84 +262,67 @@
    "id": "cb35a6f9-7a0e-4257-a76f-987dceeb4624",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# =========================\n",
-    "# Dataset & Model\n",
-    "# =========================\n",
-    "class UserDataset(Dataset):\n",
-    "    def __init__(self, merge_df: pd.DataFrame, max_padding: int = 531):\n",
-    "        \"\"\"\n",
-    "        merge_df: すべてのデータを結合したもの。以下のカラムを持つ。\n",
-    "        - \n",
-    "        \"\"\"\n",
-    "        self.merge_df = merge_df\n",
-    "        self.max_padding = max_padding\n",
-    "        self.user2anime_dict = merge_df.groupby(\"ordinal_user_id\")[\"ordinal_anime_id\"].apply(list).to_dict()\n",
-    "        self.user2mode_dict = merge_df.groupby(\"ordinal_user_id\")[\"ordinal_mode\"].apply(list).to_dict()\n",
-    "        self.user2score = merge_df.groupby(\"ordinal_user_id\")[\"score\"].apply(list).to_dict()\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return self.merge_df[\"ordinal_user_id\"].nunique()\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        \"\"\"\n",
-    "        出力したいもの\n",
-    "        - input_tensor: user_id, anime_id 系列　を結合したもの\n",
-    "        - mode_tensor: user_idか、train用の anime_id か、validation用のanime_idか、test用のanime_id かを判断するためのもの。\n",
-    "        損失計算の対象を決めるために設定する。{user_id: 0, train:1, valid:2, test:3}\n",
-    "        - attention_mask: 計算対象外のpaddingの位置をtransformerに教えるために必要\n",
-    "        - score_tensor: ラベルとなるスコア情報。ラベルが無いものは適当に0で埋めるが使わない\n",
-    "        \"\"\"\n",
-    "        user_tensor = torch.Tensor([idx]).int()\n",
-    "        anime_tensor = torch.Tensor(self.user2anime_dict[idx]).int()\n",
-    "        mode_tensor = torch.Tensor(self.user2mode_dict[idx]).int()\n",
-    "        score_tensor = torch.Tensor(self.user2score[idx]).float()\n",
-    "\n",
-    "        attention_mask = torch.zeros([self.max_padding + 1, self.max_padding + 1], dtype=torch.bool)\n",
-    "        attention_mask[: anime_tensor.size(0) + 1, : anime_tensor.size(0) + 1] = True\n",
-    "\n",
-    "        pad_length = self.max_padding - anime_tensor.size(0)\n",
-    "        input_tensor = torch.cat((user_tensor, anime_tensor, torch.zeros(pad_length, dtype=torch.int32)))\n",
-    "        mode_tensor = torch.cat(\n",
-    "            (\n",
-    "                torch.zeros(1, dtype=torch.int32),\n",
-    "                mode_tensor,\n",
-    "                torch.zeros(pad_length, dtype=torch.int32),\n",
-    "            )\n",
-    "        )\n",
-    "        score_tensor = torch.cat(\n",
-    "            (\n",
-    "                torch.zeros(1, dtype=torch.float),\n",
-    "                score_tensor,\n",
-    "                torch.zeros(pad_length, dtype=torch.float),\n",
-    "            )\n",
-    "        )\n",
-    "        sample = {\n",
-    "            \"input_tensor\": input_tensor,\n",
-    "            \"mode_tensor\": mode_tensor,\n",
-    "            \"attention_mask\": attention_mask,\n",
-    "            \"score_tensor\": score_tensor,\n",
-    "        }\n",
-    "        return sample"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "d669efd6-aaa7-43fc-9394-a19b3c045e68",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 0 start !\n"
+     ]
+    }
+   ],
    "source": [
-    "oof_pred = np.zeros(X_train_all.shape[0])\n",
-    "test_preds = []\n",
+    "oof_df = train_df[[\"user_id\", \"anime_id\"]].copy()\n",
+    "test_preds_df = test_df[[\"user_id\", \"anime_id\"]].copy()\n",
     "\n",
+    "all_df[\"mode\"] = 0  # 初期化\n",
     "\n",
     "kf = StratifiedGroupKFold(n_splits=config.nn.num_folds, shuffle=True, random_state=config.seed)\n",
     "for fold, (train_index, valid_index) in enumerate(kf.split(train_df, train_df[\"score\"], train_user_ids)):\n",
     "    print(f\"Fold {fold} start !\")\n",
     "\n",
-    "    # ここで、userをtrainとvalidに分ける"
+    "    # ここで、trainとvalidに分ける。foldごとにデータセットを作らないとおかしくなるので注意\n",
+    "    # all_df[:len(train_df)] までのデータのmodeを決定\n",
+    "    all_df.loc[train_index, \"mode\"] = 1\n",
+    "    all_df.loc[valid_index, \"mode\"] = 2\n",
+    "    # all_df[len(train_df):] のデータのmode (test) を埋める\n",
+    "    all_df.loc[len(train_df) :, \"mode\"] = 3\n",
+    "\n",
+    "    dataset = UserDataset(all_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "3c11e840-67dc-4180-9d0c-472dc5270f06",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# =========================\n",
+    "# Dataset & Model\n",
+    "# =========================\n",
+    "\n",
+    "dataset = UserDataset(all_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a56a3316-ab0f-4b1e-afea-e9ba094b6271",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
